--- a/src/styles/margin-padding.css
+++ b/src/styles/margin-padding.css
@@ -22,8 +22,28 @@
   padding-right: 8px;
 }
 
+.padding-top-16 {
+  padding-top: 16px;
+}
+
+.padding-bottom-16 {
+  padding-bottom: 16px;
+}
+
+.padding-left-16 {
+  padding-left: 16px;
+}
+
+.padding-right-16 {
+  padding-right: 16px;
+}
+
 .margin-8 {
   margin: 8px;
+}
+
+.margin-16 {
+  margin: 16px;
 }
 
 .margin-top-8 {
@@ -42,6 +62,22 @@
   margin-right: 8px;
 }
 
-.margin-16 {
-  margin: 16px;
+.margin-top-16 {
+  margin-top: 16px;
+}
+
+.margin-bottom-16 {
+  margin-bottom: 16px;
+}
+
+.margin-left-16 {
+  margin-left: 16px;
+}
+
+.margin-right-16 {
+  margin-right: 16px;
+}
+
+.margin-top-4 {
+  margin-top: 4px;
 }
